# zarr-gl

./: .eslintrc.cjs  .gitattributes  .prettierrc.cjs  CONTRIBUTING.md  README.md  data-prep.ipynb  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: pr-preview-cleanup.yml  pr-preview-deploy.yml  pr-preview.yml  pr.yml  release.yml  static.yml
demo/: .eslintrc.cjs  .gitignore  .prettierrc.js  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.js
demo/src/components/: ColorGradient.tsx  MapLayer.tsx  Mapbox.tsx  Marker.tsx  WeatherChart.tsx
demo/src/hooks/: use-colormap.ts
demo/src/lib/: colormap.ts  consts.ts  (+1 more)
example/: .gitignore  README.md  data_prep.py  index.html  prep.py  pyproject.toml
pr-15/: index.d.ts  tile.d.ts  zarr-gl.js  zarr-gl.js.map
pr-17/: index.d.ts  store.d.ts  zarr-gl.js  zarr-gl.js.map
pr-18/: package.json  store.d.ts  tile.d.ts  zarr-gl.js
pr-20/: tile.d.ts  utils.d.ts  zarr-gl.js  zarr-gl.js.map
pr-21/: tile.d.ts  utils.d.ts  zarr-gl.js.map
pr-25/: index.d.ts  tile.d.ts  zarr-gl.js  zarr-gl.js.map
pr-27/: 121.zarr-gl.js  121.zarr-gl.js.map  274.zarr-gl.js  274.zarr-gl.js.map  505.zarr-gl.js  505.zarr-gl.js.map  index.d.ts  store.d.ts  tile.d.ts  utils.d.ts  zarr-gl.js  zarr-gl.js.map
pr-28/: 121.zarr-gl.js  274.zarr-gl.js  505.zarr-gl.js  index.d.ts  store.d.ts  tile.d.ts  utils.d.ts  zarr-gl.js
src/: index.ts  shaders.ts  store.ts  tile.ts  utils.ts
src/shaders/: frag.glsl  renderFrag.glsl  renderVert.glsl  vert.glsl
src/types/: zarr-js.d.ts
(+8 files in other folders)
